--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,18 @@ h1{
 
 .selector {
     display: none;
+    font-family: 'Gayathri', sans-serif;
+    color: #0D566D;
+    font-size: 1.5vw; 
+    justify-content:space-around;   
 }
+
+.sortMovies{
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
+    font-family: 'Gayathri', sans-serif;
+    font-size: 1.5vw;
+}
+
 
 .card_film {
     display: flex;
@@ -61,6 +72,7 @@ h1{
     margin: 2vw;
     font-family: 'Gayathri', sans-serif;
     width: 22%;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .posterContainer {
@@ -74,12 +86,26 @@ h1{
     object-fit: cover;
 }
 
+.movieDate{
+    display: flex;
+    flex-direction: row;
+    width: 100%;    
+    align-items: center;
+    justify-content:space-around;
+    
+}
+
+.movieDate span{
+    font-weight: bolder;
+}
+
 .movie_info {
     flex-direction: column;
     position: absolute;
     display: none;
-    width: 100%;
+    width: 100%;    
     height: 100%;
+    padding: 3%;
     bottom: 0;
     transition: transform 0.7s ease-in;
     background-color: #E9EFDE;
@@ -90,6 +116,7 @@ h1{
 .card_film:hover .movie_info{
     display: flex;
     transform: translateY(0);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 
 }
 
