--- a/src/style.css
+++ b/src/style.css
@@ -133,34 +133,28 @@ body{
     display: none;    
     flex-wrap: wrap;
     justify-content:space-evenly;
-    text-align: center; 
-    margin-top: 50px;
+    margin: 50px 15px 0;
 }
 
 .card_film {
     display: flex;
-    position: relative;
+    flex-direction: row;
     align-items: center;
-    flex-direction: column;
-    margin: 20px;
     font-family: 'Gayathri', sans-serif;
-    width: 400px;
+    width: 800px;
+    height: 400px;
     border-radius: 20px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.frontFaceCard{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 10px;
-    width: 100%;
-    cursor: pointer;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+    margin: 30px 0px 30px 70px;
 }
 
 .posterContainer {
-    width: 90%;
-    
+    transform: translateX(-100px);
+    width: 50%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+
 }
 
 .card_film img {
@@ -170,51 +164,54 @@ body{
     border-radius: 20px;
 }
 
-.frontFaceCard h2{
-    margin: 20px;
-    font-size: 40px;
+.movie_info {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    transform: translateX(-65px);
+    width: 100%;    
+    height: 72%;
+    bottom: 0;
+    overflow: auto;
+    background-color: #E9EFDE;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .movieDate{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;    
     align-items: center;
     font-size: 30px;
-    margin: 20px;
-    justify-content:space-around;
-    
-    
 }
 
+.rate {
+    color: #437D2E;
+}
 
 .movieDate span{
     font-size: 35px;
     font-weight: bolder;
 }
 
-
-
-.movie_info {
-    flex-direction: column;
-    position: absolute;
-    display: none;
-    width: 100%;    
-    height: 100%;
-    padding: 3%;
-    bottom: 0;
-    overflow: auto;
-    transition: transform 0.7s ease-in;
-    background-color: #E9EFDE;
-    transform: translateY(101%);
-    border-radius: 20px;
+.movie_info h2 {
+    color: #B46C01;
+    text-transform: uppercase;
+    margin-top: 15px;
+    font-size: 27px;;
 }
 
-.card_film:hover .movie_info{
-    display: flex;
-    transform: translateY(0);
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-} 
+.movie_info p {
+    margin-top: 15px;
+}
+
+.purpleText{
+    color: #460C74;
+    font-weight: bolder;
+}
+
 
 .characters {
     display: none;
@@ -228,7 +225,8 @@ footer{
     display:flex;    
     justify-content:space-around;
     align-items: center;  
-    height: 150px;
+    height: 100px;
+    margin-bottom: 50px;
 }
 footer a {
     color: #F9FFED;
@@ -241,31 +239,28 @@ footer a {
     font-size: 25px;    
     border-radius: 15px;
 }
-i{
+footer i{
     font-size: 50px;    
 }
 
 
+@media only screen and (max-device-width: 900px){
 
-/* For device width 990px and larger: */
-@media only screen and (max-device-width: 576px) {
-    .haederContainer{
-            margin: 25px;
+    .haederContainer h1{
+        padding: 20px 0 15px;
     }
 
-   .haederContainer h1{
-    padding: 30px;
-    }
-    
     .navContainer{
         justify-content: flex-end;
         position: relative;
+        height: 55px;
     }
+
     .menuContainer {
         position: absolute;
         display: flex;
         flex-direction: column;
-        top: 70px;
+        top: 55px;
         width: 100%;
         height: fit-content;
         z-index: 10;
@@ -275,19 +270,18 @@ i{
         display: block;
     }
     .menuHamburguesa i{
-        font-size: 50px;
+        font-size: 40px;
         color: #F9FFED;
         margin-right: 30px;
     }
-
-
 
     .menu{
         display: none;
         flex-direction: column;
         align-items: center;
-        height: auto; 
-        padding-bottom: 70px;   
+        height: fit-content; 
+        padding-top: 10px;
+        padding-bottom: 30px;   
     }
 
     .menu.activated{
@@ -296,32 +290,122 @@ i{
 
     .menu a {
         border-bottom: 2px solid #F9FFED;
-        line-height: 90px;
+        line-height: 60px;
         padding: 0;
+        font-size: 30px;
     }
 
     .home{
+        background-image: none;
         background-color: #E9EFDE;
         height: auto;
     }
 
     .home img {
         display: flex;
+        margin-top: 50px;
     }
 
     .aboutDescription{
         flex-direction: column;
         align-items: center;
-        margin-top: 100px;
+        margin-top: 55px;
         width: 100%;
     }
     .aboutText{
-        font-size: 15px;
+        font-size: 20px;
     }
     .films  {
         margin-top: 0px;
+        justify-content: center;
     }
     .card_film {
-        width: 300px;
+        margin-left: 120px;
+    }  
+    .description{
+        font-size: 22px;
     }
+} 
+
+
+/* For device width 420px and smaller: */
+@media only screen and (max-device-width: 420px) {
+    .haederContainer{
+        margin: 25px;
+    }
+
+    .navContainer{
+        height: 75px;
+    }
+
+    .menuContainer {
+        top: 74px;
+    }
+    .menuHamburguesa i{
+        font-size: 50px;
+    }
+
+    .menu{
+        padding: 40px 0px 70px;    
+    }
+    .menu a {
+        font-size: 40px;
+        line-height: 90px;
+    }
+
+    .aboutDescription{
+        margin-top: 100px;
+    }
+
+    .aboutText{
+        font-size: 15px;
+    }
+
+    .selector{
+        margin-bottom: 30px;
+    }
+
+    .card_film{
+        flex-direction: column;
+        height: 1400px;
+        margin-left: 0;
+        margin-top: 300px;
+    }
+
+    .posterContainer{
+        height: 600px;
+        transform: translate(0, -250px)
+    }
+
+    .movie_info{
+        transform: translate(0, -150px);
+        width: 80%;
+        height: 1500PX;
+        padding-bottom: 0;
+    }
+    .movieDate{
+        margin-bottom: 40px;
+    }
+    .movie_info p {
+        margin-top: 20px;
+    }
+    .movieDate p {
+        font-size: 45px;
+    }
+    .movie_info h2 {
+        font-size: 45px;
+    }
+
+    .movie_info .director  {
+        font-size: 40px;
+    }
+
+    .movie_info .producer  {
+        font-size: 40px;
+    }
+
+    .movie_info .description {
+        font-size: 38px;
+    }
+
 }
