--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-image: url("https://i.ibb.co/TDQZk6p/Fondo-Totoro.jpg");
     background-size: cover;
     height: 900px;
@@ -84,7 +83,8 @@ body{
     display: flex;
     flex-direction: column;
     align-self: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    margin-top: 100px;
     width: 60%;
 }
 
