--- a/style.css
+++ b/style.css
@@ -1,93 +1,536 @@
-*{
-    text-decoration: none;    
+@import url('https://fonts.googleapis.com/css2?family=Gayathri:wght@100&display=swap');
+
+* {
+    margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+    box-sizing: border-box;
 }
 
 body{
     background-color: #E9EFDE;
 }
 
-h1{
+.headerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #0D566D;      
-    font-family: 'Gayathri', sans-serif;
-    height: 2vw;
-    margin-bottom: 0vw;
+    height: fit-content;
+    font-family: 'Roboto', sans-serif;
+    margin: 30px;
 }
 
+.headerContainer h1{
+    color: #0D566D;      
+    font-family: 'Gayathri', sans-serif;
+    font-size: 80px;
+    height: 80px;
+    padding: 25px;
+}
+
+/* menu */
+.navContainer{
+    display: flex;
+    align-items: center;
+    background-color: #C28800;
+    width: 100%;
+    height: 75px;
+}
+
+.menuContainer{
+    display: flex;
+    width: 100%;
+}
+
+.menuHamburguesa {
+    display: none;
+}
 
 .menu{
-    display: flex;    
-    justify-content:space-evenly;    
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 0px 0px; 
+    width: 100%;
+    height: 65px;
     background-color: #C28800;
-    padding: 1vw;        
     font-family: 'Gayathri', sans-serif;    
     color: #F9FFED;
-    list-style: none;
+    list-style: none;     
 }
 
 .menu a {
-    color: #F9FFED;    
+    color: #F9FFED;
+    font-size: 40px; 
+    padding: 10px 0px 0px;     
 }
 
-.films{
-    display:none;    
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    text-align: center; 
-       
-}
-
-.aboutText{
-    font-family: 'Gayathri', sans-serif;
-    width: 100vw;
-    margin-top: 10vw;    
-}
+/*first page*/
 
 .home{
-    width: 90%;    
-    background-color: #E9EFDE;
-    background-size: cover;
-}
-
-/* For device width 990px and larger: */
-@media only screen and (min-device-width: 990px) {
-.home{
-    width: 100%;
-    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-image: url("https://i.ibb.co/TDQZk6p/Fondo-Totoro.jpg");
     background-size: cover;
+    height: 900px;
+    width: 100%;
 }
-.aboutText{
-    font-family: 'Gayathri', sans-serif;
-    font-size: 2vw;
-    width: 60vw;
-    margin-top: 10vw;       
+
+.home img {
+    display: none;
+}
+
+.aboutDescription {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    justify-content: center;
+    width: 60%;
 }
 
 .aboutTitle{    
-    color: #0D566D;
-    font-size: 3.5vw;
+    color: #0D566D;    
     font-family: 'Gayathri', sans-serif; 
-    margin-left: 8vw;    
+    font-size: 50px;
+    height: 50px;
+    margin-left: 50px;
 }
+
+.aboutText{
+    font-family: 'Gayathri', sans-serif;
+    font-size: 25px;
+    margin: 40px 50px 0;
 }
+
+.home img {
+    margin-bottom: 100px;
+    
+}
+
+/* Filmography */
+
+.secondPage{
+    margin-bottom: 100px;
+}
+
+
+.selector {
+    display: none;
+    font-family: 'Gayathri', sans-serif;
+    color: #0D566D;
+    font-size: 35px; 
+    justify-content: space-around;   
+    margin-top: 100px;
+}
+
+.sortMovie .filterMovies{
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
+    font-family: 'Gayathri', sans-serif;
+    font-size: 20px;
+}
+
+.films{
+    display: none;    
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    margin: 50px 15px 0;
+}
+
+.card_film {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: 'Gayathri', sans-serif;
+    width: 800px;
+    height: 400px;
+    border-radius: 20px;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+    margin: 30px 0px 30px 70px;
+}
+
+.posterContainer {
+    transform: translateX(-100px);
+    width: 50%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+
+}
+
+.card_film img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.movie_info {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    transform: translateX(-65px);
+    width: 110%;    
+    height: 72%;
+    bottom: 0;
+    overflow: auto;
+    background-color: #E9EFDE;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.movieDate{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;    
+    align-items: center;
+    font-size: 30px;
+}
+
+.rate {
+    color: #437D2E;
+}
+
+.movieDate span{
+    font-size: 35px;
+    font-weight: bolder;
+}
+
+.movie_info h2 {
+    color: #B46C01;
+    text-transform: uppercase;
+    margin-top: 15px;
+    font-size: 27px;;
+}
+
+.movie_info p {
+    margin-top: 15px;
+}
+
+.purpleText{
+    color: #460C74;
+    font-weight: bolder;
+}
+
+
+.characters {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.photoimg{
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.card_character{
+    width: 40%;
+    max-width: 1000px;
+    height: 300px;
+    background-color: #E9EFDE;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    margin-bottom: 40px;
+    margin-left: 20px;
+}
+
+.photoContainer{
+    min-width: 200px;
+    max-width: 300px;
+    height: 300px;
+    transform: translateX(-12px);
+    position: relative;
+    box-shadow: 8px 8px 4px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 12px;
+}
+
+.characterData span{
+    color: #460C74;
+    margin: 8px 0;    
+}
+
+.movie .specie{
+    font-size: 30px;
+}
+.characterName{
+    margin: 20px 0 25px;
+    text-transform: uppercase;
+    color: #B46C01;
+}
+
+.characterInfo{
+    transform: translateX(50px);
+    width: 70%;
+    height: 100%;
+    transform:translateY(55px) ;
+    
+}
+
+/* footer */
 
 footer{
     display:flex;    
-    justify-content:space-evenly;
-    text-align: center;  
+    justify-content:space-around;
+    align-items: center;  
+    height: 100px;
+    margin-bottom: 10px;
 }
-
 footer a {
     color: #F9FFED;
 }
 .website{
-    font-size: 1vw;
     font-family: 'Gayathri', sans-serif;
     text-decoration: none;
-    background-color: #9E3797;    
-    padding: 10px 6px 10px 6px;
+    background-color: #098ED6; 
+    padding: 20px 15px 15px 15px;  
+    font-size: 25px;    
+    border-radius: 15px;
+}
+footer i{
+    font-size: 50px;    
+}
+
+
+@media only screen and (max-device-width: 900px){
+
+    .headerContainer h1{
+        padding: 20px 0 15px;        
+    }
+
+    .navContainer{
+        justify-content: flex-end;
+        position: relative;
+        height: 55px;
+    }
+
+    .menuContainer {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 55px;
+        width: 100%;
+        height: fit-content;
+        z-index: 10;
+    }
+
+    .menuHamburguesa{
+        display: block;
+    }
+    .menuHamburguesa i{
+        font-size: 40px;
+        color: #F9FFED;
+        margin-right: 30px;
+    }
+
+    .menu{
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        height: fit-content; 
+        padding-top: 10px;
+        padding-bottom: 30px;   
+    }
+
+    .menu.activated{
+        display: flex;
+    }
+
+    .menu a {
+        border-bottom: 2px solid #F9FFED;
+        line-height: 60px;
+        padding: 0;
+        font-size: 30px;
+    }
+
+    .home{
+        background-image: none;
+        background-color: #E9EFDE;
+        height: auto;
+    }
+
+    .home img {
+        display: flex;
+        margin-top: 50px;
+    }
+
+    .aboutDescription{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 55px;
+        width: 100%;
+    }
+    .aboutText{
+        font-size: 20px;
+    }
+    .films  {
+        margin-top: 0px;
+        justify-content: center;
+    }
+    .card_film {
+        margin-left: 120px;
+    }  
+    .description{
+        font-size: 22px;
+    }
+} 
+
+
+/* For device width 480px and smaller: */
+@media only screen and (max-device-width: 480px) {
+    .haederContainer{
+        margin: 15px;        
+    }
+
+    .headerContainer h1{
+        font-size: 40px;
+        padding: 15px;
+    }
+
+    .navContainer{
+        height: 55px;
+    }
+
+    .menuContainer {
+        top: 76px;
+        background-color: #C28800;   
+    }
+    .menuHamburguesa i{
+        font-size: 40px;
+    }
+
+    .menu{
+        padding: 40px 0px 45px;         
+    }
     
+    .menu.activated{
+        background-color: #C28800;   
+        margin-top: -20px;
+    }
+
+    .menu a {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .home img {
+        width: 80%;
+        margin: 0;
+    }
+
+    .aboutDescription{
+        margin-top: 80px;
+    }
+
+    .aboutTitle{
+        font-size: 40px;
+    }
+    .aboutText{
+        font-size: 15px;
+    }
+
+    .selector{
+        margin-bottom: 20px;
+    }
+
+    .card_film{
+        flex-direction: column;
+        height: 800px;
+        margin-left: 0;
+        margin-top: 200px;
+        display: flex;
+        align-items: center;
+    }
+
+    .posterContainer{
+        height: 250px;
+        transform: translate(0, -150px)
+    }
+
+    .movie_info{
+        transform: translate(0, -120px);
+        width: 98%;
+        height: 1500px;
+        padding-bottom: 0; 
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+          
+    }
+
+    .movieDate{
+        margin-bottom: 40px;
+    }
+    .movie_info p {
+        margin-top: 20px;
+    }
+    .movieDate p {
+        font-size: 25px;
+    }
+    .movie_info h2 {
+        font-size: 25px;
+    }
+
+    .movie_info .director  {
+        font-size: 20px;
+    }
+
+    .movie_info .producer  {
+        font-size: 20px;
+    }
+
+    .movie_info .description {
+        font-size: 18px;
+    }
+
+    .characters{
+        justify-content: space-evenly;
+    }
+
+    .card_character{
+        flex-direction: column;        
+        margin-bottom: 120px;
+        margin-top: 80px;
+        margin-left: 0px;
+        width: 80%;
+        height: 250px; 
+    }
+    
+    .photoContainer{
+        max-width: 40%;
+        max-height: 80%;        
+        transform: translate(0, -100px);
+    }
+
+    .characterInfo{
+        transform: translate(0, -80px);
+    }
+
+    .characterData{
+        font-size: 15px;
+        display: flex;        
+        justify-content: space-around;
+    }
+
+    .characterName{
+        margin: 15px;
+        text-align: center;
+    }
+
+    .website{
+        font-size: 12px;
+        padding: 10px 8px 8px 8px;  
+        text-align: center;
+    }
+
+    .selector {
+        font-size: 20px;
+    }
+
 }
